--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,11 @@
+html,
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
 code {
@@ -9671,12 +9673,12 @@ h6 {
   padding-left: 5px;
 }
 
-.getstarted-wrap {
+/* .getstarted-wrap {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100%;
   background: transparent linear-gradient(128deg, #754400 0%, #333354 100%) 0% 0% no-repeat padding-box;
-}
+} */
 
 .getstarted-cont {
   padding: 170px 0;
@@ -9833,4 +9835,20 @@ h6 {
 
 .row {
   margin-left: 240px;
+}
+
+.company-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.submit-btn {
+  margin-top: 16px;
+}
+
+.form-select {
+  width: 382px;
+  height: 37px;
+  border: none;
+  margin-top: 16px;
 }
