--- a/src/index.css
+++ b/src/index.css
@@ -9726,12 +9726,12 @@ h6 {
   padding-left: 5px;
 }
 
-.getstarted-wrap {
+/* .getstarted-wrap {
   display: flex;
   flex-direction: column;
   min-height: 1000px;
   background: transparent linear-gradient(128deg, #754400 0%, #333354 100%) 0% 0% no-repeat padding-box;
-}
+} */
 
 .getstarted-cont {
   padding: 170px 0;
