--- a/src/index.css
+++ b/src/index.css
@@ -9790,6 +9790,7 @@ h6 {
   justify-content: center;
   align-items: center;
   margin-top: 96px;
+  padding: 24px;
 }
 
 .signup-cont__form-btns__btn {
@@ -10865,6 +10866,14 @@ h6 {
     border-right: 0px solid #f2f2f2;
     border-bottom: 2px solid #f2f2f2;
   }
+}
+
+.subscribe-btn {
+  background-color: rgba(255, 255, 255, 0.7);
+  color: var(--thm-base);
+  border: 1px solid var(--thm-base);
+  box-sizing: border-box;
+  margin-right: 12px;
 }
 
 @media (max-width: 625px) {
